--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,11 @@
-h1 {
-  color: red;
-}
+@charset "utf-8";
+@import "normalize";
+@import "visually-hidden";
+@import "variables";
+@import "mixins";
+@import "fonts";
+@import "page";
+// @import "button";
+// @import "link";
+// @import "form";
+
