--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,8 +4,11 @@
 @import "variables";
 @import "mixins";
 @import "fonts";
+@import "wrapper";
 @import "page";
-// @import "button";
-// @import "link";
-// @import "form";
-
+@import "button";
+@import "link";
+@import "header";
+@import "menu";
+@import "main-header";
+@import "advantages";
