--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,7 +5,7 @@ $s-padding: 20px;
 
 $m-width: 768px;
 $m-width-max: 1023px;
-$m-padding: 24px;
+$m-padding: 22px;
 
 $l-width: 1024px;
 $l-padding: 30px;
@@ -17,9 +17,11 @@ $retina-dppx: 1.5dppx;
 // Цвета
 $brand-color: #00ffd8;
 $light-color: #FFFFFF;
+$text-light-color: #FFFFFE;
 $dark-color: #000000;
-$dark-color-text: rgba(27, 45, 55, 0.5); // #8d969b
-$text-color: rgba(51, 51, 51, 0.77); // #333333
+$light-dark-color: #222222; //Телефон в хедере
 
-$middle-color: #707070;
-$middle-color-darker: #666666
+$light-gray: #707070;
+$middle-gray: #666666;
+$dark-gray: rgba(51, 51, 51, 0.77); // #333333
+$darkest-gray: rgba(27, 45, 55, 0.5); // #8d969b
