Добавляет разметку и стилизацию блока Услуги для десктопа

--- a/source/sass/main-header.scss
+++ b/source/sass/main-header.scss
@@ -1,7 +1,8 @@
 .main-header {
+  margin-bottom: 100px;
   color: $light-color;
-  background-color: $dark-color;
 
+  background-color: $dark-color;
   background-image: url('../img/header-l@1x.jpg');
   background-repeat: no-repeat;
   background-size: cover;
