--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -30,6 +30,7 @@
     font-size: 30px;
     line-height: 50px;
     font-weight: 900;
+    letter-spacing: 1.2px;
     text-transform: uppercase;
   }
   & h3 {
