--- a/source/sass/header.scss
+++ b/source/sass/header.scss
@@ -66,7 +66,7 @@
     padding-bottom: 5px;
 
     @media (min-width: $m-width) {
-      max-width: 893;
+      max-width: 893px;
       padding-right: 65px;
       padding-left: 65px;
     }
