--- a/source/sass/main-header.scss
+++ b/source/sass/main-header.scss
@@ -60,7 +60,8 @@
     position: relative;
     margin-bottom: 300px;
 
-    background-image: url('../img/header-m@1x.jpg');
+    background-image: url(../img/header-m@1x.jpg);
+    background-position: 36.6% center;
   }
   .main-header__wrapper {
     padding-top: 100px;
@@ -79,7 +80,7 @@
     }
   }
 
-  main-header__description {
+  .main-header__description {
     max-width: 700px;
     font-size: 16px;
     line-height: normal;
@@ -110,6 +111,9 @@
 @media (max-width: $s-width-max) {
   .main-header {
     text-align: center;
+
+    background-image: url("../img/header-s@1x.jpg");
+    background-position: 30.1% center;
   }
 
   .main-header__wrapper {
@@ -119,6 +123,7 @@
 
   .main-header__button {
     width: 280px;
+    margin-right: 16px;
     padding: 16px 15px;
 
     &:not(:last-of-type) {
@@ -133,5 +138,19 @@
 
   .main-header h1 {
     margin-bottom: 21px;
+  }
+}
+
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .main-header {
+    background-image: url("../img/header-l@2x.jpg");
+
+    @media (max-width: $m-width-max) {
+    background-image: url("../img/header-m@2x.jpg");
+    }
+
+    @media (max-width: $s-width-max) {
+      background-image: url("../img/header-s3@2x.jpg");
+    }
   }
 }
