Добавляет начальную разметку и стили для блока Проекты и некоторые стили для Услуг

--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -39,11 +39,11 @@
   @include reset-list-style;
 }
 
-.services__subitem {
+.services__sublist li {
   margin-bottom: 10px;
 }
 
-.services__subitem a {
+.services__sublist a {
   font-size: 13px;
   color: $dark-gray;
   line-height: normal;
