--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,4 +12,6 @@
 @import "menu";
 @import "main-header";
 @import "advantages";
-// @import "services";
+@import "services";
+@import "projects";
+// @import "footer";
