--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,6 +17,7 @@ $retina-dppx: 1.5dppx;
 // Цвета
 $brand-color: #00ffd8;
 $light-color: #FFFFFF;
+$light-color-transparent: rgba(255, 255, 255, 0.34); // #575757 Рамки и стрелки кнопок в Проектах
 $text-light-color: #FFFFFE;
 $dark-color: #000000;
 $light-dark-color: #222222; //Телефон в хедере
