Добавляет часть стилизации формы в футере

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,10 +8,12 @@
 @import "page";
 @import "button";
 @import "link";
+@import "form";
 @import "header";
 @import "menu";
 @import "main-header";
 @import "advantages";
 @import "services";
 @import "projects";
-// @import "footer";
+@import "footer";
+@import "contacts-list";
