--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -29,6 +29,37 @@
   }
 }
 
+@mixin button {
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+
+  background-color: transparent;
+  border: 1px solid $brand-color;
+  border-radius: 0;
+
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+
+    background-color: $brand-color;
+  }
+
+  &:active {
+    text-decoration: none;
+    opacity: 0.3;
+  }
+}
+
+@mixin dotted-line ($color) {
+    background-image: linear-gradient(to right, $color 0, $color 1px, transparent 1px, transparent 5px);
+    background-position: 0 bottom;
+    background-size: 5px 1px;
+    background-repeat: repeat-x;
+}
+
 // @mixin button {
 //   display: inline-block;
 //   padding: 14px 26px;
