--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -82,3 +82,12 @@
     url("../fonts/raleway-cyrillic-700.woff2") format("woff2");
 }
 
+/* circe-400 - cyrillic */
+@font-face {
+  font-family: "Circe";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/circe-regular.woff") format("woff"),
+    url("../fonts/circe-regular.woff2") format("woff2");
+}
+
