--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "header";
 @import "menu";
 @import "main-header";
+@import "description";
 @import "advantages";
 @import "services";
 @import "projects";
