--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -97,11 +97,13 @@
   .menu__link {
     display: block;
     width: 167px;
-    padding: 10px 20px;
+    padding: 11px 20px 9px;
 
+    font-family: 'Circe', Helvetica, sans-serif;
     text-align: center;
     font-size: 13.5px;
     font-weight: 400;
+    letter-spacing: -1.1px; //Вопреки данным макета, ради PP
 
     background-color: #e7e7e7;
     // border-bottom: qpx solid ;
