--- a/source/sass/advantages.scss
+++ b/source/sass/advantages.scss
@@ -135,6 +135,7 @@
 @media (max-width: $s-width-max) {
   .advantages {
     margin-top: 40px;
+    margin-bottom: 32px;
   }
 
   .advantages__list {
