--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -34,10 +34,11 @@
     text-transform: uppercase;
   }
   & h3 {
-    font-family: 'Raleway', Helvetica, sans-serif;
+    font-family: 'Roboto', Helvetica, sans-serif;
 
     font-size: 16px;
-    line-height: 26px;
+    // line-height: 26px;
+    line-height: normal;
     font-weight: 900;
     text-transform: uppercase;
   }
