--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -1,9 +1,12 @@
 .services {
-  @include line;
+  @media (min-width: $l-width) {
+    @include line;
+  }
 }
 
 .services h2 {
-  margin-bottom: 20px;
+  margin-bottom: 17px;
+  margin-left: 4px;
 }
 
 .services__list {
@@ -26,9 +29,15 @@
   min-height: 500px;
   margin-left: 44px;
   margin-bottom: 44px;
-  padding: 16px 50px 16px 44px;
+  padding: 20px 50px 16px 44px;
 
   box-shadow: 0px 5px 9px 1px rgba(0, 0, 0, 0.05);
+}
+
+.services__item h3 {
+  margin-bottom: 25px;
+
+  line-height: normal;
 }
 
 .services__item .button {
@@ -40,12 +49,221 @@
 }
 
 .services__sublist li {
-  margin-bottom: 10px;
+  line-height: 15px;
+  margin-bottom: 16px;
 }
 
 .services__sublist a {
   font-size: 13px;
   color: $dark-gray;
   line-height: normal;
+  // line-height: 13px;
   text-decoration-color: rgba(51, 51, 51, 0.3);
+}
+
+@media (max-width: $m-width-max) {
+  .services h2 {
+    margin-left: 0;
+    margin-bottom: 14px;
+  }
+
+  .services__list {
+    display: block;
+
+    margin-left: -20px;
+
+    columns: 2;
+    column-gap: 0;
+    column-fill: balance;
+    // flex-direction: column;
+
+    // max-height: 200px;
+  }
+
+
+  .services__item h3 {
+    display: flex;
+    align-items: center;
+
+    min-height: 46px;
+    margin-bottom: auto;
+    margin-top: 0;
+    padding-left: 21px;
+    // padding-top: 16px;
+    // padding-bottom: 12px;
+    padding-top: 2px;
+    padding-bottom: 0px;
+    padding-right: 35px;
+
+    line-height: 20px;
+
+    border: 1px solid #f4f4f4;
+    background-color: #f4f4f4;
+  }
+
+  .services__item .button {
+    position: absolute;
+    right: 17px;
+    top: 17px;
+    z-index: 20;
+
+    padding: 0;
+    background-color: transparent;
+    border: none;
+
+    display: block;
+    width: 16px;
+    height: 16px;
+    // background-color: royalblue;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 6px;
+      right: 4px;
+      // width: 10px;
+      // height: 6px;
+      border: 4px solid transparent;
+      border-top-color: $dark-color;
+      border-bottom-width: 0;
+    }
+
+    &:hover + h3,
+    &:focus  + h3 {
+      position: relative;
+      z-index: 10;
+
+      box-shadow: 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65), inset 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65);
+      // box-shadow: inset 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65);
+      border: solid 1px $brand-color;
+    }
+  }
+
+  .services__item {
+    // flex-basis: 40%;
+    position: relative;
+
+    // display: inline-block;
+    display: block;
+    // box-sizing: border-box;
+    // width: 100%;
+    min-height: auto;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    padding: 0;
+    padding-top: 0;
+
+
+    box-shadow: none;
+
+    &--opened {
+      @media (min-width: $m-width) {
+        h3 {
+          background-color: #d7d7d7;
+        }
+      }
+      & .services__sublist {
+        display: inline-block;
+      }
+    }
+
+    &:hover h3 {
+      @media (min-width: $m-width) {
+        background-color: #d7d7d7;
+      }
+    }
+  }
+
+  .services__sublist {
+    display: none;
+  }
+
+  .services__sublist li {
+    margin-bottom: 0;
+  }
+
+  .services__sublist a {
+    display: flex;
+    align-items: center;
+    min-height: 46px;
+    padding-left: 21px;
+    padding-right: 50px;
+
+    font-size: 14px;
+    // line-height: 1.86;
+    line-height: 20px;
+    color: $dark-color;
+    vertical-align: middle;
+
+    background-color: #f4f4f4;
+    border: solid 1px #f4f4f4;
+    border-bottom-color: #e8e8e8;
+
+    &:hover,
+    &:focus {
+      position: relative;
+      z-index: 10;
+      text-decoration: none;
+      box-shadow: 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65), inset 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65);
+      // box-shadow: inset 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65);
+      border: solid 1px #00ffd7;
+    }
+  }
+
+  .services__sublist a span {
+    display: none;
+  }
+}
+
+@media (max-width: $s-width-max) {
+  .services h2 {
+    margin-bottom: 11px;
+  }
+
+  .services__list {
+    display: flex;
+    flex-direction: column;
+
+    margin-left: -20px;
+  }
+
+  .services__item h3 {
+    font-size: 14px;
+  }
+
+  .services__item {
+    margin-left: 0;
+    margin-right: -20px;
+
+    &--opened {
+      margin-bottom: 0;
+    }
+
+    &--opened h3 {
+      font-size: 16px;
+    }
+
+    &--opened .services__sublist {
+      display: block;
+      margin-top: 3px;
+    }
+  }
+
+  .services__item .button {
+    right: 15px;
+  }
+
+  .services__sublist a {
+    // min-height: 39px;
+    min-height: 38px;
+
+    font-size: 12px;
+    line-height: 17px;
+
+    background-color: $light-color;
+
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-right-color: transparent;
+  }
 }
