--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -2,6 +2,8 @@
   @media (min-width: $l-width) {
     @include line;
   }
+
+  margin-bottom: 60px;
 }
 
 .services h2 {
@@ -62,6 +64,9 @@
 }
 
 @media (max-width: $m-width-max) {
+  .services {
+    margin-bottom: 65px;
+  }
   .services h2 {
     margin-left: 0;
     margin-bottom: 14px;
@@ -124,8 +129,15 @@
       // width: 10px;
       // height: 6px;
       border: 4px solid transparent;
-      border-top-color: $dark-color;
+      border-top-color: #aeadad;
       border-bottom-width: 0;
+    }
+
+    &:hover,
+    &:focus {
+      &::before {
+        border-top-color: $dark-color;
+      }
     }
 
     &:hover + h3,
@@ -164,6 +176,9 @@
       }
       & .services__sublist {
         display: inline-block;
+      }
+      .button::before {
+        border-top-color: $dark-color;
       }
     }
 
@@ -216,6 +231,10 @@
 }
 
 @media (max-width: $s-width-max) {
+  .services {
+    margin-bottom: 33px;
+  }
+
   .services h2 {
     margin-bottom: 11px;
   }
