--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -58,7 +58,7 @@
     }
 
     & h3 {
-      font-family: 'Roboto', Helvetica, sans-serif;
+      // font-family: 'Roboto', Helvetica, sans-serif;
       font-size: 14px;
       line-height: 26px;
       font-weight: 400;
@@ -80,6 +80,7 @@
     }
 
     & h3 {
+      // font-family: 'Raleway', Helvetica, sans-serif;
       font-size: 16px;
     }
   }
