--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -27,7 +27,9 @@
   flex-shrink: 1;
 
   box-sizing: border-box;
-  // max-width: 360px;
+  @media (min-width: $l-width) {
+    max-width: 360px;
+  }
   min-height: 500px;
   margin-left: 44px;
   margin-bottom: 44px;
@@ -90,6 +92,7 @@
     display: flex;
     align-items: center;
 
+    height: 50px; //Для IE
     min-height: 46px;
     margin-bottom: auto;
     margin-top: 0;
@@ -195,14 +198,21 @@
 
   .services__sublist li {
     margin-bottom: 0;
+    width: 100%; // Для IE
+    box-sizing: border-box; // Для IE
   }
 
   .services__sublist a {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: 50px; // Для IE
     min-height: 46px;
     padding-left: 21px;
     padding-right: 50px;
+    // flex-basis: 100%;
 
     font-size: 14px;
     // line-height: 1.86;
