Добавляет начальную разметку и стилизацию блока Партнеры

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@
 @import "advantages";
 @import "services";
 @import "projects";
+@import "partners";
 @import "footer";
 @import "contacts-list";
 @import "social";
