--- a/source/sass/partners.scss
+++ b/source/sass/partners.scss
@@ -2,38 +2,226 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
 
 .partners {
   @media (min-width: $l-width) {
-  @include line;
+    @include line;
+
+    &::before {
+      top: 22px;
+      width: 58.1%;
+      right: 182px;
+    }
   }
 
-  margin-bottom: 98px;
+  margin-bottom: 62px;
 }
+
+.partners__container {
+  @media (min-width: $l-width) {
+    display: flex;
+    justify-content: stretch;
+  }
+
+  overflow: visible;
+}
+
 
 .partners h2 {
   margin-bottom: 40px;
 }
 
+.partners__list-button {
+  position: absolute;
+  top: -84px;
+  width: 57px;
+  height: 34px;
+
+  border-width: 2px;
+  border-color: #292929;
+
+  line-height: 25px;
+
+
+  &:hover,
+  &:focus {
+    background-color: $brand-color;
+
+    & svg {
+      fill: #000000;
+    }
+  }
+
+  &:first-of-type {
+    right: 57px;
+
+    border-right: none;
+
+    & svg {
+      margin-right: 17px;
+    }
+
+    &::before {
+      position: absolute;
+      content: "";
+      top: 11px;
+      right: 0;
+      width: 1px;
+      height: 8px;
+      background-color: #292929;
+    }
+  }
+
+  &:last-of-type {
+    right: 0;
+
+    border-left: none;
+
+    & svg {
+      margin-left: 17px;
+    }
+  }
+}
+
 .partners__list {
   @include reset-list-style;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  @media (min-width: $l-width) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-  margin-left: -30px;
+    flex-grow: 1;
+    margin-left: -10px;
+  }
+  padding-bottom: 35px;
 }
 .partners__item {
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+
+  flex-basis: 20%;
   flex-grow: 1;
-  max-width: 268px;
+  flex-shrink: 1;
+
   min-height: 133px;
-  margin-left: 30px;
-  margin-bottom: 30px;
+  @media (min-width: $l-width) {
+    max-width: 268px;
+    margin-left: 10px;
+    margin-bottom: 30px;
+  }
 
   border: solid 1px #d6d6d6;
+  background-color: $light-color;
+}
 
-  background-repeat: no-repeat;
-  background-position: center;
-  filter: grayscale(100%);
+.partners__item {
+  & a {
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
 
-  &--shield {
-    background-image: url('../img/shield-l@1x.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    // background-size: contain;
+    // filter: grayscale(1);
+    // filter: gray;
+    opacity: 0.5;
+
+  }
+
+  &--ava a {
+    background-image: url('../img/ava-bw-l@1x.png');
+    background-position-x: 32%;
+  }
+
+  &--mirror a {
+    background-image: url('../img/mirror-bw-l@1x.png');
+    background-position-y: -18px;
+  }
+
+  &--shield a {
+    background-image: url('../img/shield-bw-l@1x.png');
+    background-position-y: -27px;
+  }
+
+  &--ntf a {
+    background-image: url('../img/ntf-bw-l@1x.png');
+    background-position-y: -23px;
+  }
+
+  & a:hover,
+  & a:focus {
+    opacity: 1;
+  }
+}
+
+@media (max-width: $m-width-max) {
+  .partners__list-button {
+    display: none;
+  }
+
+  .partners__item {
+  @media (min-width: $m-width) {
+    border: none;
+    }
+
+    width: 280px;
+    // height: 200px;
+
+    box-shadow: 0px 10px 18px 2px rgba(0, 0, 0, 0.05);
+  }
+
+//   .partners__pagination {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+
+//     margin-top: 6px;
+//     margin-left: -5px;
+//   }
+
+//   .partners__pagination {
+//     width: 6px;
+//     height: 6px;
+//     padding: 0;
+//     margin: 0;
+//     margin-left: 5px;
+
+//     border-color: $lightest-gray;
+//     border-radius: 50%;
+//     background-color: $lightest-gray;
+
+//     &:hover,
+//     &:focus,
+//     &--selected {
+//       width: 8px;
+//       height: 8px;
+//       border-color: $brand-color;
+//       background-color: $brand-color;
+//     }
+
+//     &:active {
+//       opacity: 0.5;
+//     }
+//   }
+}
+
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .partners__item {
+
+    &--ava a {
+      background-image: url('../img/ava-bw-l@2x.png');
+    }
+
+    &--mirror a {
+      background-image: url('../img/mirror-bw-l@2x.png');
+    }
+
+    &--shield a {
+      background-image: url('../img/shield-bw-l@2x.png');
+    }
+
+    &--ntf a {
+      background-image: url('../img/ntf-bw-l@2x.png');
+    }
   }
 }
