--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -53,7 +53,8 @@
   & button {
     @include button;
 
-    width: 230px;
+    min-width: 230px;
+    max-width: 350px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 33px;
@@ -87,9 +88,9 @@
   margin-right: 32px;
   margin-bottom: 22px;
 
-  &--text,
-  &--tel {
-    flex-basis: 40%;
+    &--text,
+    &--tel {
+      flex-basis: 34%;
   }
 
   &--tel {
@@ -103,7 +104,7 @@
 
   &--textarea {
     margin-top: 7px;
-    margin-bottom: 9px;
+    margin-bottom: 12px;
   }
 }
 
@@ -139,6 +140,9 @@
 
 @media (max-width: $m-width-max) {
   .form {
+    padding-right: 22px;
+    padding-left: 24px;
+
     & input[type=text],
     & input[type=tel],
     & input[type=email],
@@ -146,6 +150,11 @@
       font-size: 14px;
       line-height: 2.54;
       letter-spacing: 0.56px;
+    }
+
+    & textarea {
+      height: 55px;
+      margin-bottom: -4px;
     }
 
     & button {
@@ -158,8 +167,78 @@
     }
   }
 
+  .form__field {
+    margin-bottom: 14px;
+    margin-left: 21px;
+    margin-right: 21px;
+
+    &--text {
+      flex-basis: 20%;
+    }
+
+    &--tel {
+      flex-basis: 30%;
+    }
+
+    &--textarea {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
   .form__conditions {
     font-size: 10px;
     line-height: 1.3;
+  }
+
+  .form__conditions a {
+    padding-bottom: 0;
+  }
+
+  .form button {
+    min-width: 164px;
+    margin-top: 28px;
+    margin-bottom: 16px;
+    padding-top: 1px;
+
+    box-shadow: none;
+  }
+}
+
+@media (max-width: $m-width-max) {
+  .form {
+    padding-left: 20px;
+    padding-right: 20px;
+
+    & input[type=text],
+    & input[type=tel],
+    & input[type=email],
+    & textarea {
+      padding-bottom: 13px;
+    }
+  }
+
+  .form__field {
+    margin-right: 0;
+    margin-left: 0;
+
+
+    &--text {
+      margin-right: 43px;
+      flex-basis: 40%;
+    }
+
+    &--tel {
+      flex-basis: 40%;
+    }
+  }
+
+  .form__conditions {
+    margin-top: 12px;
+  }
+
+  .form button {
+    margin-top: 32px;
+    margin-bottom: 38px;
   }
 }
