--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -91,3 +91,11 @@
 //   }
 // }
 
+@mixin full-width {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+}
