--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -343,6 +343,7 @@
     line-height: 14px;
 
     background-color: $dark-color;
+    border-top: none
 
     & span {
       display: inline-block;
